# studyRust

./: Cargo.toml  a  a.json  b  full.pwr  full_of.pwr  fundfull.pwr  symbol  sz000001.day
FHSplitFinGen/: readme.txt
src/: doc.md  dzh.rs  main.rs  mylog.rs  si.rs  sina.rs  tdx.rs  xuangubao.rs
xgbtem.dt/: db  snap.0000000000003615  snap.0000000000007596  snap.000000000000C015  snap.00000000000220A0
