[package]
name = "study_rust"
version = "0.1.0"
authors = ["wf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.5"
serde_json="*"
serde = { version = "1.0", features = ["derive"] }
sled="*"
chrono="*"
log="*"
env_logger="*"
encoding_rs="*"
bytes="*"
json="*"